[upd] css Explorer fix for word-wrap

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -1677,10 +1677,14 @@ table th.thpointer {
     overflow: hidden;
     text-overflow: ellipsis;*/
     overflow-wrap:break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
     line-height:13px;
 }
 .table-cases td {
     overflow-wrap:break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
     line-height:13px;
 }
 
